@startuml Servicos
' Diagrama de Classes — Subsistema de Servicos
' Backend MobiFix (ASP.NET Core 8 / C#)
' Referencia: Projeto-MobiFix/Backend/{Controllers,Services,Models}/Servicos
'
' Destaques:
'   - ServicoDto tem composicao de dois niveis com IntervencaoRealizadaDto
'     e PecaUtilizadaDto (sub-documentos MongoDB).
'   - Dependencias cross-subsistema: Utilizadores (IClienteService,
'     IFuncionarioService), Email (IEmailService), Financas (FaturaDto).
'   - AgendaController usa IFuncionarioService para escolher mecanico aleatorio.

left to right direction
skinparam classAttributeIconSize 0
hide empty members

' =============== SERVICOS ===============
class ServicosController <<controller>> {
    -_servicoService : IServicoService
    +ServicosController(servicoService : IServicoService)
    +GetTodos() : Task<IActionResult>
    +GetPorId(id : int) : Task<IActionResult>
    +Criar(dto : ServicoCriacaoDto) : Task<IActionResult>
    +Atualizar(id : int, dto : ServicoAtualizacaoDto) : Task<IActionResult>
    +GetProntas() : Task<IActionResult>
    +Fechar(id : int) : Task<IActionResult>
    +LevantarComFatura(id : int, dto : LevantarTrotineteDto) : Task<IActionResult>
}

interface IServicoService {
    +ListarTodosAsync() : Task<IEnumerable<ServicoDto>>
    +ObterPorIdAsync(id : int) : Task<ServicoDto?>
    +CriarServicoDiagnosticoAsync(dto : ServicoCriacaoDto) : Task<ServicoDto?>
    +AtualizarEstadoAsync(id : int, novoEstado : string) : Task<bool>
    +AtualizarServicoAsync(id : int, dto : ServicoAtualizacaoDto) : Task<ServicoDto?>
    +ListarProntasAsync() : Task<IEnumerable<TrotineteProntaDto>>
    +FecharServicoAsync(id : int) : Task<bool>
    +LevantarComFaturaAsync(id : int, metodoPagamento : string) : Task<LevantamentoComFaturaDto?>
}

class ServicoService <<service>> {
    -_httpClient : HttpClient
    -_clienteService : IClienteService
    -_emailService : IEmailService
    +ServicoService(httpClient : HttpClient, clienteService : IClienteService, emailService : IEmailService)
    +ListarTodosAsync() : Task<IEnumerable<ServicoDto>>
    +ObterPorIdAsync(id : int) : Task<ServicoDto?>
    +CriarServicoDiagnosticoAsync(dto : ServicoCriacaoDto) : Task<ServicoDto?>
    +AtualizarEstadoAsync(id : int, novoEstado : string) : Task<bool>
    +AtualizarServicoAsync(id : int, dto : ServicoAtualizacaoDto) : Task<ServicoDto?>
    +ListarProntasAsync() : Task<IEnumerable<TrotineteProntaDto>>
    +FecharServicoAsync(id : int) : Task<bool>
    +LevantarComFaturaAsync(id : int, metodoPagamento : string) : Task<LevantamentoComFaturaDto?>
    -NotificarConclusaoAsync(servico : ServicoDto) : Task
}

' =============== AGENDA ===============
class AgendaController <<controller>> {
    -_agendaService : IAgendaService
    -_funcionarioService : IFuncionarioService
    +AgendaController(agendaService : IAgendaService, funcionarioService : IFuncionarioService)
    +Listar() : Task<IActionResult>
    +Obter(id : int) : Task<IActionResult>
    +Criar(dto : AgendaCriacaoDto) : Task<IActionResult>
    +Atualizar(id : int, dto : AgendaDto) : Task<IActionResult>
    +Eliminar(id : int) : Task<IActionResult>
}

interface IAgendaService {
    +ListarAgendaAsync() : Task<IEnumerable<AgendaDto>>
    +ObterSlotPorIdAsync(id : int) : Task<AgendaDto?>
    +CriarSlotAsync(dto : AgendaCriacaoDto) : Task<AgendaDto?>
    +AtualizarSlotAsync(id : int, dto : AgendaDto) : Task<AgendaDto?>
    +EliminarSlotAsync(id : int) : Task<bool>
}

class AgendaService <<service>> {
    -_httpClient : HttpClient
    +AgendaService(httpClient : HttpClient)
    +ListarAgendaAsync() : Task<IEnumerable<AgendaDto>>
    +ObterSlotPorIdAsync(id : int) : Task<AgendaDto?>
    +CriarSlotAsync(dto : AgendaCriacaoDto) : Task<AgendaDto?>
    +AtualizarSlotAsync(id : int, dto : AgendaDto) : Task<AgendaDto?>
    +EliminarSlotAsync(id : int) : Task<bool>
}

' =============== DTOs Servico ===============
class ServicoDto <<DTO>> {
    +ServicoID : int
    +TrotineteNumSerie : string
    +Estado : string
    +DataAgendamento : DateTime
    +DescricaoDiagnostico : string?
    +FeedbackCliente : string?
    +DataConclusao : DateTime?
    +Preco : decimal
    +HistoricoIntervencoes : List<IntervencaoRealizadaDto>
}

class IntervencaoRealizadaDto <<DTO>> {
    +IntervencaoCatalogoID : int
    +MecanicoNumero : string
    +DataInicio : DateTime
    +DataFim : DateTime?
    +TempoGastoMinutos : int?
    +PecasUtilizadas : List<PecaUtilizadaDto>
}

class PecaUtilizadaDto <<DTO>> {
    +PecaEAN : string
    +Quantidade : int
}

class ServicoCriacaoDto <<DTO>> {
    +TrotineteNumSerie : string
    +FeedbackCliente : string?
}

class ServicoAtualizacaoDto <<DTO>> {
    +Estado : string?
    +DescricaoDiagnostico : string?
    +Preco : decimal?
    +DataConclusao : DateTime?
    +HistoricoIntervencoes : List<IntervencaoRealizadaDto>?
}

class LevantarTrotineteDto <<DTO>> {
    +MetodoPagamento : string
}

class LevantamentoComFaturaDto <<DTO>> {
    +Fatura : FaturaDto
}

class TrotineteProntaDto <<DTO>> {
    +ServicoID : int
    +TrotineteNumSerie : string
    +Marca : string?
    +Modelo : string?
    +ClienteNIF : string
    +DataAgendamento : DateTime
    +DataConclusao : DateTime?
    +Preco : decimal
    +DescricaoDiagnostico : string?
}

' =============== DTOs Agenda ===============
class AgendaDto <<DTO>> {
    +AgendaID : int
    +MecanicoNumero : string
    +ServicoID : int
    +TipoSlot : string
    +IntervencaoID : int?
    +DataHoraInicio : DateTime
    +Estado : string
}

class AgendaCriacaoDto <<DTO>> {
    +AgendaID : int
    +MecanicoNumero : string
    +ServicoID : int
    +TipoSlot : string
    +IntervencaoID : int
    +DataHoraInicio : DateTime
    +Estado : string
}

' =============== EXTERNOS ===============
interface IClienteService <<external>>
interface IFuncionarioService <<external>>
interface IEmailService <<external>>
class FaturaDto <<external>>

' =============== RELACOES ===============
' Realizacoes
ServicoService  ..|> IServicoService : realiza
AgendaService   ..|> IAgendaService  : realiza

' Dependencias DI
ServicosController   ..> IServicoService      : injeta
AgendaController     ..> IAgendaService       : injeta
AgendaController     ..> IFuncionarioService  : injeta
ServicoService       ..> IClienteService      : injeta
ServicoService       ..> IEmailService        : injeta

' Composicoes (sub-documentos)
ServicoDto               "1" *-- "0..*" IntervencaoRealizadaDto : historico
IntervencaoRealizadaDto  "1" *-- "0..*" PecaUtilizadaDto        : pecasUtilizadas

' Associacoes entre DTOs
LevantamentoComFaturaDto --> "1" FaturaDto : contem

' Dependencias assinaturas
ServicosController ..> ServicoCriacaoDto
ServicosController ..> ServicoAtualizacaoDto
ServicosController ..> LevantarTrotineteDto
AgendaController   ..> AgendaDto
AgendaController   ..> AgendaCriacaoDto
IServicoService    ..> ServicoDto
IServicoService    ..> ServicoCriacaoDto
IServicoService    ..> ServicoAtualizacaoDto
IServicoService    ..> TrotineteProntaDto
IServicoService    ..> LevantamentoComFaturaDto
IAgendaService     ..> AgendaDto
IAgendaService     ..> AgendaCriacaoDto

@enduml
